[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/greyhat_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/gunner/player/ColorReassignShader.gdshader" type="Shader" id=2]
[ext_resource path="res://src/gunner/OffscreenIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gunner/enemies/EnemyRobot.gd" type="Script" id=4]
[ext_resource path="res://src/gunner/enemies/Idle.gd" type="Script" id=5]
[ext_resource path="res://addons/beehive/machine.gd" type="Script" id=6]
[ext_resource path="res://src/gunner/enemies/Dead.gd" type="Script" id=7]
[ext_resource path="res://src/gunner/enemies/Walk.gd" type="Script" id=8]
[ext_resource path="res://src/gunner/enemies/Knockback.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 26.5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/outline = Color( 0.819608, 0.486275, 0.486275, 1 )
shader_param/accent = Color( 0.27451, 0.258824, 0.368627, 1 )

[node name="EnemyRobot" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 5.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 4, 4 )
frames = ExtResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, 8 )
scale = Vector2( 1.4, 2.4 )

[node name="OffscreenIndicator" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -64, -48 )

[node name="Machine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="Machine"]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="Machine"]
script = ExtResource( 8 )

[node name="Dead" type="Node" parent="Machine"]
script = ExtResource( 7 )

[node name="Knockback" type="Node" parent="Machine"]
script = ExtResource( 9 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( -21, 0 )

[node name="FrontRay" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
